# jogo_da_velha_kivy

./: .gitignore  pyproject.toml
jogo_da_velha_kivy/: game.py  game_layout.py  hook-kivy.py  main.kv  main.py
