[tool.poetry]
name = "jogo-da-velha-kivy"
version = "0.1.0"
description = ""
authors = ["matheuslpolidoro <mattpolidoro4@gmail.com>"]
readme = "README.md"
packages = [{include = "jogo_da_velha_kivy"}]

[tool.poetry.dependencies]
python = "3.11.1"
kivy = {version = "^2.3.0.dev0", allow-prereleases = true, source = "kivy"}
kivymd = "^1.1.1"
pyinstaller = "^6.1.0"


[[tool.poetry.source]]
name = "kivy"
url = "https://kivy.org/downloads/simple/"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
